2017-09-26  Zan Dobersek  <zdobersek@igalia.com>

        [CMake] Use implicit include directories for Clang as well
        https://bugs.webkit.org/show_bug.cgi?id=177426

        Reviewed by Michael Catanzaro.

        In WebKitCompilerFlags.cmake, also gather and use the system
        include directories for C and C++ build targets when compiling
        with Clang. This fixes compilation errors when cross-building
        WebKit with a Clang-based toolchain.

        COMPILER_IS_GCC_OR_CLANG is used to check for GCC or Clang
        compilers. That only checks for the C++ compiler, but it's not
        reasonable to expect two widely different compilers being used
        for C and C++ compilation.

        * Source/cmake/WebKitCompilerFlags.cmake:

2017-09-20  Alberto Garcia  <berto@igalia.com>

        Fix HPPA and Alpha builds
        https://bugs.webkit.org/show_bug.cgi?id=177224

        Reviewed by Alex Christensen.

        * CMakeLists.txt:

2017-09-19  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [CMake] Add ENABLE_WEB_CRYPTO option and make ENABLE_SUBTLE_CRYPTO depend on it.
        https://bugs.webkit.org/show_bug.cgi?id=177180

        Reviewed by Michael Catanzaro.

        This adds a ENABLE_WEB_CRYPTO flag and makes ENABLE_SUBTLE_CRYPTO depend on it.
        The GTK and WPE ports enable them and set ENABLE_WEB_CRYPTO to public.

        * Source/cmake/OptionsGTK.cmake: Set both features to ON and ENABLE_WEB_CRYPTO to public. No change in behaviour for GTK.
        * Source/cmake/OptionsWPE.cmake: Do like on the GTK port. The public flag is now ENABLE_WEB_CRYPTO.
        * Source/cmake/WebKitFeatures.cmake: Add the definition of ENABLE_WEB_CRYPTO and make ENABLE_SUBTLE_CRYPTO depend on it.

2017-09-07  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE][CMake] Add "dist" and "distcheck" targets
        https://bugs.webkit.org/show_bug.cgi?id=176448

        Reviewed by Carlos Garcia Campos.
