@@ -73,12 +73,15 @@ find_package(LibEpoxy 1.4.0 REQUIRED)
 find_package(LibGcrypt 1.6.0 REQUIRED)
 find_package(LibSoup 2.42.0 REQUIRED)
 find_package(LibXml2 2.8.0 REQUIRED)
-find_package(LibXslt 1.1.7 REQUIRED)
 find_package(PNG REQUIRED)
 find_package(Sqlite REQUIRED)
 find_package(WebP REQUIRED)
 
 find_package(WPEBackend REQUIRED)
+
+if (ENABLE_XSLT)
+    find_package(LibXslt 1.1.7 REQUIRED)
+endif ()
 
 set(USE_CAIRO ON)
 set(USE_XDGMIME ON)
